objects/nXBI__Business_Credit_Score__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nXBI__Score_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Score_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Credit Score</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>